Criação de Rotas e páginas com React-router-Dom

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -13,10 +13,9 @@
     justify-content: space-around;
 }
 
-.header span{
-    font-size: 2rem;
-    color: #fff;
-    font-weight: 500;
+.header img{
+    width: 150px;
+    height: 100%;
 }
 
 .header a{
