Criar Componente VideoList e Página Pesquisar

--- a/src/pages/Entrada/Entrada.module.css
+++ b/src/pages/Entrada/Entrada.module.css
@@ -7,110 +7,118 @@
 	--h2-font: 3.2rem;
 	--p-font: 1rem;
 }
-body{
+.body{
 	background: var(--bg-color);
+	background-size: cover;
 	color: var(--text-color);
+	display: flex;
+	flex-direction: column;
+	gap: 100px;
 }
 section{
 	max-width: 1110px;
 	margin: 0 auto;
-	padding-top: 100px;
 }
 .home{
-	min-height: 100vh;
-	height: 100%;
-	width: 100%;
+	margin-top: 150px;
 	display: grid;
-    grid-template-columns: repeat(2, 1fr); /* Duas colunas iguais */
-    gap: 20px; /* Espaçamento entre as colunas */
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px; 
     align-items: center;
     justify-content: center;
     text-align: justify;
 }
+.home_text{
+	display: flex;
+	flex-direction: column;
+	gap: 25px;
+	line-height: 25px;
+}
 .home_text h1{
-	margin: 12px 0 25px 0;
 	font-size: var(--big-font);
+	margin-bottom: 10px;
+}
+.home_text h2{
+	font-size: var(--h2-font);
 }
 .home_text h5{
-	margin-bottom: 20px;
-	font-size: 24px;
-}
-.home_text span{
-	color:  var(--main-color);
+	font-size: var(--p-font)
 }
 .home_text p{
 	font-size: var(--p-font);
 	color: var(--second-color);
-	line-height: 25px;
-	margin-bottom: 20px;
 }
-.home_social_media a{
-	width: 40px;
-	height: 40px;
+.homeCardGroup{
+	display: flex;
+	gap: 10px;
+}
+.homeCardGroup a{
+	border: 2px solid var(--main-color);
+	width: 30px;
+	height: 30px;
 	border-radius: 50%;
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
-	background: var(--main-color);
-	color: var(--bg-color);
-	margin: 0 20px 30px 0;
 }
-.home_social_media a:hover{
+.homeCardGroup a:hover{
 	transform: scale(1.2);
-	background: rgb(139, 0, 0);
+	background: var(--main-color);
+	border: 2px solid var(--second-color);
 	transition: .50s;
 }
 .btn{
-	display: inline-block;
-	color: var(--bg-color);
-	background: var(--main-color);
+	display: flex;
+	color: var(--text-color);
 	font-size: var(--p-font);
 	padding: 10px 35px;
+	border: 2px solid var(--main-color);
 	border-radius: 10px;
 	transition: ease .50s;
+	text-decoration: none;
+	width: 40%;
 }
 .btn:hover{
 	transform: scale(1.2);
 }
-header.sticky{
-	background: rgba(255, 255, 255, 0.8);
-	padding: 5px 0;
-	box-shadow: 0 0 10px rgb(0 0 0 / 20%);
-}
-.services {
+.services{
+	display: flex;
+	flex-direction: column;
 	text-align: center;
+	gap: 20px;
 }
-.services_itens{
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(210px, auto));
-	grid-gap: 2rem;
+.certificados_group{
+	display: flex;
+	flex-wrap: wrap;
+	gap: 20px;
+	width: 100%;
+	height: 100%;
+}
+.certificados_card{
+	display: flex;
+	flex-direction: column;
 	align-items: center;
-}
-.service_item{
-    margin-top: 20px;
 	padding: 40px;
+	border: 2px solid var(--second-color);
 	transition: ease .50s;
 	cursor: pointer;
     height: 100%;
-    width: 300px;
+	width: 100%;
+	line-height: 25px;
+	gap: 10px;
 }
-.service_item img{
-	max-width: 100%;
+.certificados_card img{
 	width: 80px;
 	height: auto;
-	margin-bottom: 20px;
 }
-.service_item h3{
-	font-size: 24px;
-	margin-bottom: 20px;
+.certificados_card h3{
+	font-size: var(--h2-font);
 }
-.service_item p{
+.certificados_card p{
 	font-size: var(--p-font);
-	color: inherit;
-	line-height: 25px;
 	text-align: justify;
 }
-.service_item:hover{
+.certificados_card:hover{
 	background: var(--second-color);
 	box-shadow: 20px 0 90px 0 rgb(10 10 70 / 10%);
 	border-radius: 10px;
@@ -127,140 +135,158 @@ header.sticky{
 	width: 350px;
 	height: auto;
 }
-.sobre_nos{
+.about_text{
     text-align: justify;
 }
-.sobre_nos h3{
+.about_text h3{
 	font-size: 32px;
 	margin-bottom: 20px;
 }
-.sobre_nos p{
+.about_text p{
 	font-size: var(--p-font);
-	color: inherit;
 	line-height: 25px;
 	margin-bottom: 20px;
 }
-.portfolio_head{
-    text-align: center;
-}
-.portfolio_head h3{
-	font-size: 32px;
-	margin-bottom: 20px;
-}
-.portfolio_head p{
-	font-size: var(--p-font);
-	color: inherit;
-	line-height: 25px;
-	margin-bottom: 20px;
-    text-align: justify;
-}
-.portfolio_content{
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(300px, auto));
-	grid-gap: 2rem;
+.atividades{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	align-items: center;
-	margin-top: 10px;
 	text-align: center;
-	cursor: pointer;
+	gap: 20px;
 }
-.col{
-	position: relative;
+.atividades_head{
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
 }
-.col img{
-	max-width: 100%;
-	width: 300px;
-	height: 300px;
-	object-fit: cover;
-	border-radius: 10px;
+.atividades_head h3{
+	font-size: var(--h2-font);
 }
-.portfolio_content_text{
-	background: transparent;
-	height: 100%;
-	width: 100%;
-	position: absolute;
-	column-gap: 10px;
-	top: 0;
-	left: 0;
-	border-radius: 10px;
-	transition: all .30s;
+.atividades_head p{
+	font-size: var(--p-font);
+    text-align: justify;
 }
-.portfolio_content_text:hover{
-	background: linear-gradient(rgba(255, 255, 255, 0.226) 0%, #333);
-}
-.portfolio_content_text h3{
-	position: absolute;
-	width: 100%;
-	font-size: 25px;
-	color: var(--bg-color);
-	bottom: 0;
-	left: 50%;
-	transform: translate(-50%);
-	opacity: 0;
-	transition: all .50s;
-	margin-bottom: 50px;
-}
-.portfolio_content_text:hover h3{
-	bottom: 50%;
-	opacity: 1;
-}
-.portfolio_content_text h5{
-	position: absolute;
-	width: 100%;
-	font-size: 16px;
-	color: var(--bg-color);
-	bottom: 0;
-	left: 50%;
-	transform: translate(-50%);
-	opacity: 0;
-	transition: all .50s;
-}
-.portfolio_content_text:hover h5{
-	bottom: 40%;
-	opacity: 1;
-}
-.contact{
-	background: inherit;
-	margin-top: 150px;
-	padding: 50px 120px;
+.atividades_cardGroup{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	text-align: center;
+	gap: 50px;
+	flex-wrap: wrap;
+}
+.atividades_card {
+	width: 300px;
+	height: 300px;
+	border: 2px solid var(--main-color);
 	border-radius: 10px;
-	border: 2px solid grey;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.atividades_cardGroup_text{
+	width: 80%;
+}
+.atividades_cardGroup_text h3{
+	text-align: center;
+}
+.contact{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	width: 80%;
+	gap: 20px;
+	padding: 50px 120px;
+	border-radius: 10px;
+	border: 2px solid var(--second-color);
+	margin-bottom: 15px;
+}
+.contact_text{
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
 }
 .contact_text h3{
-	font-size: 25px;
-	color: inherit;
-	margin-bottom: 20px;
+	font-size: var(--h2-font);
 }
 .contact_text p{
 	font-size: var(--p-font);
-	color: inherit;
-	margin-bottom: 20px;
 }
-.form input[type="email"]{
-	max-width: 100%;
-	width: 450px;
-	padding: 15px;
-	background: inherit;
-	color: inherit;
-	border: 2px solid grey;
-	margin: 0 10px;
-	border-radius: 10px;
+.contact form{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	gap: 20px;
 }
-.form input[type="submit"] {
-	display: inline-block;
+.contact form input{
+	width: 80%;
 	padding: 15px;
-	background: inherit;
-	color: inherit;
-	border: 2px solid grey;
-	margin: 0 10px;
+	background: var(--bg-color);
+	border: 2px solid var(--second-color);
 	border-radius: 10px;
-	transition: ease .50s;
+	color: var(--text-color);
+}
+.contact form input[type="submit"] {
 	cursor: pointer;
-	
+	width: 50%;
 }
 .form input[type="submit"]:hover{
 	transform: scale(1.2);
+}
+
+/* Responsive */
+
+@media(max-width: 1200px){
+	section{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 500px;
+	}
+	:root{
+		--big-font: 4rem;
+		--h2-font: 2.5rem;
+		--p-font: 1rem;
+		transition: .3s;
+	}
+	.home {
+		display: flex;
+	}
+	.home img{
+		width: 300px;
+	}
+	.services{
+		display: flex;
+		flex-direction: column;
+	}
+	.about{
+		display: flex;
+	}
+	.about img{
+		width: 200px;
+	}
+	.atividades{
+		display: flex;
+		flex-direction: column;
+	}
+	.atividades_cardGroup{
+		display: flex;
+		width: 90%;
+		align-items: center;
+		justify-content: center;
+		gap: 50px;
+	}
+	.atividades_card {
+		width: 200px;
+		height: 200px;
+		border: 2px solid #F5F5F5;
+		border-radius: 10px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
 }
