--- a/src/pages/PageNotFound/PageNotFound.module.css
+++ b/src/pages/PageNotFound/PageNotFound.module.css
@@ -1,6 +1,6 @@
 .container{
     padding-top: 84px;
-    width: 100%;
+    min-width: 100%;
     height: 100%;
     background: #222;
     color: #fff;
