--- a/src/pages/Search/Search.module.css
+++ b/src/pages/Search/Search.module.css
@@ -1,7 +1,7 @@
 .search {
+    width: 100%;
+    min-height: 800px;
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
     padding-top: 84px;
 }
-
