--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -1,7 +1,9 @@
 .container{
     min-width: 100%;
+    height: 100%;
     background-color: #191919;
     color: #fff;
-    padding-block: 1rem;
+    padding-block: 1.5rem;
     text-align: center;
+    padding-inline: 1rem;
 }
