--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -16,6 +17,7 @@ code {
     monospace;
 }
 
+/* formatação geral dos cards */
 .cards {
   display: flex;
   gap: 5px;
