--- a/src/pages/PageNotFound/PageNotFound.module.css
+++ b/src/pages/PageNotFound/PageNotFound.module.css
@@ -1,6 +1,6 @@
 .container {
     padding-top: 84px;
-    min-width: 100%;
+    width: 100%;
     height: 100%;
     background: #222;
     color: #fff;
@@ -12,6 +12,6 @@
 }
 
 .container img {
-    height: 600px;
+    height: 450px;
     padding-bottom: 2rem;
 }
