--- a/src/components/HomeBanner/HomeBanner.module.css
+++ b/src/components/HomeBanner/HomeBanner.module.css
@@ -7,18 +7,13 @@
 	--h2-font: 3.2rem;
 	--p-font: 1rem;
 }
-section{
-	display: flex;
-	flex-direction: column;
-	gap: 100px;
-	max-width: 1110px;
-	margin: 0 auto;
-}
 .home{
 	margin-top: 150px;
 	display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 50px; 
+	gap: 100px;
+	max-width: 1110px;
+	margin: 150 0 auto;
     align-items: center;
     justify-content: center;
     text-align: justify;
@@ -64,12 +59,6 @@ section{
 }
 
 @media(max-width: 1200px){
-	section{
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		width: 500px;
-	}
 	:root{
 		--big-font: 4rem;
 		--h2-font: 2.5rem;
@@ -78,12 +67,11 @@ section{
 	}
 	.home {
 		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 500px;
 	}
 	.home img{
 		width: 300px;
-	}
-	.services{
-		display: flex;
-		flex-direction: column;
 	}
 }
