--- a/src/pages/Search/Search.module.css
+++ b/src/pages/Search/Search.module.css
@@ -1,7 +1,6 @@
 .search {
     width: 100%;
-    min-height: 600px;
+    height: 100%;
     display: flex;
-    flex-direction: column;
     padding-top: 68px;
 }
