--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,8 +1,15 @@
 .card {
     display: flex;
+    width: 225px;
 }
 
-.card img {
+.capa {
     width: 225px;
     border-radius: 8px;
+}
+
+.capa:hover {
+    transform: scale(1.15);
+    border-radius: 10px;
+    box-shadow: 0 0 10px #222;
 }
