--- a/src/components/VideoList/VideoList.module.css
+++ b/src/components/VideoList/VideoList.module.css
@@ -1,7 +1,8 @@
 .videos {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
     gap: 5px;
+    flex-wrap: wrap;
     justify-content: center;
-    margin-top: 0.5rem;
+    align-items: center;
 }
