--- a/src/components/SearchVideoList/SearchVideoList.module.css
+++ b/src/components/SearchVideoList/SearchVideoList.module.css
@@ -1,12 +1,15 @@
-.container{
+.container {
     min-width: 280px;
     max-width: 1150px;
-    margin: 0 auto;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.container input{
+.container input {
     width: 320px;
-    padding: 12px 10px;
+    padding: 15px 10px;
     margin-block: 0.5rem;
     border: 0;
     outline: none;
