--- a/src/pages/Search/Search.module.css
+++ b/src/pages/Search/Search.module.css
@@ -1,6 +1,8 @@
 .search {
     width: 100%;
-    height: 100%;
-    display: flex;
+    min-height: 600px;
     padding-top: 68px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
